--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,18 @@
 * {
+    
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
     outline: none;
-}
-body {
  
-    overflow-x: hidden;
-    background: url('img/got.jpeg') center center no-repeat;
-    background-size: cover;
-    font-size: 16px;
-    height: 100%;	
 }
+
+body {
+    
+	font-size: 26px;
+    background: url('img/got.jpeg') center center no-repeat;
+    background-size: cover;	
+    background-color: #000;
+    overflow: hidden;
+}
+
