--- a/public/index.css
+++ b/public/index.css
@@ -8,11 +8,12 @@
 }
 
 body {
-    
+    max-width: 100%;
+    margin: 0 auto;
 	font-size: 26px;
     background: url('img/got.jpeg') center center no-repeat;
     background-size: cover;	
     background-color: #000;
-    overflow: hidden;
+    
 }
 
